--- a/consoles.html
+++ b/consoles.html
@@ -39,8 +39,7 @@
   </section>
   <div id="content">
     <section class="sidebar"> 
-      <!-- This adds a sidebar with 1 searchbox,2 menusets, each with 4 links -->
-      
+      <!-- This adds a sidebar with 1 searchbox,2 menusets, each with 4 links -->    
       <div id="menubar">
 		 <nav class="menu">
           <h2><!-- Title for menuset 1 -->NintenGo </h2>
@@ -68,13 +67,13 @@
           <input type="button" name="button" value="Info" class="buyButton">
         </article>
         <article class="productInfo"><!-- Each individual product description -->
-          <div><img src="https://live.staticflickr.com/4116/4909697151_0c3cc63003_b.jpg" alt="_MG_1656"/></div>
+          <div><img src="GameAndWatch.jpg" alt="_MG_1656"/></div>
           <p class="price">Game &amp; Watch&nbsp;</p>
           <p class="productContent">1980</p>
           <input type="button" name="button" value="Info" class="buyButton">
         </article>
         <article class="productInfo"> <!-- Each individual product description -->
-          <div><img src="https://farm1.staticflickr.com/697/23179974993_0eab6d76c6_b.jpg" alt="Nintendo NES"/></div>
+          <div><img src="TheNES.jpg" alt="Nintendo NES"/></div>
           <p class="price">The NES (Famicon)&nbsp;</p>
           <p class="productContent">1986</p>
           <input type="button" name="button" value="INFO" class="buyButton">
@@ -83,20 +82,20 @@
 <div class="productRow"> 
         <!-- Each product row contains info of 3 elements -->
   <article class="productInfo"> <!-- Each individual product description -->
-    <div><img src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/3ab67e2498050.5601746e0d2ff.jpg" alt="Paper Game"/></div>
+    <div><img src="TheGameBoy.jpg" alt="Paper Game"/></div>
           <p class="price">The Game Boy</p>
           <p class="productContent">1989&nbsp;</p>
           <input type="button" name="button" value="INFO" class="buyButton">
         </article>
         <article class="productInfo"> <!-- Each individual product description -->
           <div>
-			<div></div><img src="https://cdn.pixabay.com/photo/2017/04/04/18/14/video-game-console-2202633_960_720.jpg" alt="Video Game Console, Video Game, Play, Toy"/></div>
+			<div></div><img src="TheSNES.webp" alt="Video Game Console, Video Game, Play, Toy"/></div>
           <p class="price">The SNES&nbsp;</p>
           <p class="productContent">1991&nbsp;</p>
           <input type="button" name="button" value="INFO" class="buyButton">
   </article>
         <article class="productInfo"><!-- Each individual product description -->
-          <div><img src="https://cdn.pixabay.com/photo/2017/04/04/18/17/video-game-console-2202654_960_720.jpg" alt="Video Game Console, Video Game, Play, Toy"/></div>
+          <div><img src="TheVirtualBoy.webp" alt="Video Game Console, Video Game, Play, Toy"/></div>
           <p class="price">The Virtual Boy&nbsp;</p>
           <p class="productContent">&nbsp;1995</p>
           <input type="button" name="button" value="INFO" class="buyButton">
@@ -104,20 +103,19 @@
 </div>
       <div class="productRow">
         <article class="productInfo"> <!-- Each individual product description -->
-          <div><img src="https://cdn.pixabay.com/photo/2017/04/04/18/10/video-game-console-2202594_960_720.jpg" alt="Video Game Console, Video Game, Play, Toy"/></div>
+          <div><img src="TheNintendo64.webp" alt="Video Game Console, Video Game, Play, Toy"/></div>
           <p class="price">&nbsp;The Nintendo 64</p>
           <p class="productContent">&nbsp;1996</p>
           <input type="button" name="button" value="INFO" class="buyButton">
         </article>
         <article class="productInfo"><!-- Each individual product description -->
-          <div><img src="https://cdn.pixabay.com/photo/2012/10/26/01/57/game-console-63063_960_720.jpg" alt="Game Console, Computer Game, Play, Nintendo, Gamecube"/></div>
-          
+          <div><img src="TheGameCube.webp" alt="Game Console, Computer Game, Play, Nintendo, Gamecube"/></div>       
 <p class="price">&nbsp;The Game Cube </p>
 <p class="productContent">2001&nbsp;</p>
           <input type="button" name="button" value="INFO" class="buyButton">
 </article>
         <article class="productInfo"><!-- Each individual product description -->
-<div><img src="https://cdn.pixabay.com/photo/2017/04/04/18/09/video-game-console-2202585_960_720.jpg" alt="Video Game Console, Video Game, Play, Toy"/></div>
+<div><img src="TheNintendoDS.webp" alt="Video Game Console, Video Game, Play, Toy"/></div>
 <p class="price">The Nintendo DS Era</p>
           <p class="productContent">2004 - 2011&nbsp;</p>
 <input type="button" name="button" value="INFO" class="buyButton">
@@ -125,19 +123,19 @@
       <div class="productRow">
 		  </arcticle>
         <article class="productInfo"> <!-- Each individual product description -->
-          <div><img src="https://cdn.pixabay.com/photo/2017/04/04/18/17/video-game-console-2202660_960_720.jpg" alt="Video Game Console, Video Game, Play, Toy"/></div>
+          <div><img src="TheNintendoWii.webp" alt="Video Game Console, Video Game, Play, Toy"/></div>
           <p class="price">&nbsp;The Nintendo Wii</p>
           <p class="productContent">2006&nbsp;</p>
           <input type="button" name="button" value="INFO" class="buyButton">
 </article>
         <article class="productInfo"><!-- Each individual product description -->
-          <div><img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Wii_U_Console_and_Gamepad.png" alt="Image result for wii u"/></div>
+          <div><img src="TheNintendoWiiU.png" alt="Image result for wii u"/></div>
           <p class="price">&nbsp;The Nintendo Wii U</p>
           <p class="productContent">2012&nbsp;</p>
           <input type="button" name="button" value="INFO" class="buyButton">
 </article>
         <article class="productInfo"><!-- Each individual product description -->
-          <div><img src="https://upload.wikimedia.org/wikipedia/commons/7/73/Nintendo_Switch_Portable.png" alt="Image result for nintendo switch"/></div>
+          <div><img src="TheNintendoSwitch.png" alt="Image result for nintendo switch"/></div>
           <p class="price">&nbsp;The Nintendo Switch</p>
           <p class="productContent">2016&nbsp;</p>
           <input type="button" name="button" value="INFO" class="buyButton">
